# bitperm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/common/: error.rs
core/src/permission/: mod.rs
core/src/scope/: mod.rs
ffi/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
ffi/src/: lib.rs
ffi/types/: index.ts
jslib/: package-lock.json  package.json
node/: Cargo.toml
src/: lib.rs  permission.rs
src/permission/: error.rs  mod.rs
src/scope/: conversion.rs  error.rs  mod.rs
types/: package-lock.json  package.json  tsconfig.json
