[package]
name = "bitpermjs"
version = "0.1.0"
description = "Typescript bindings for Bitperm library."
authors = ["Alexandra Belluscio"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
